objects/AIA_Workplan_Type_Task__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Enter Data</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Notify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assgin_To_Non_AIA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Non-AIA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee_Type__c</fullName>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplan Type Assignment</relationshipLabel>
        <relationshipName>Workplan_Type_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date_Determined_By__c</fullName>
        <label>Due Date Determined By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expected Days To Complete</fullName>
                </value>
                <value>
                    <fullName>Implementation Timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Days_To_Complete__c</fullName>
        <label>Expected Days To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Days__c</fullName>
        <formula>IF(Expected_Days_To_Complete__c != 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Design Approval</fullName>
                </value>
                <value>
                    <fullName>Benefits Core Team</fullName>
                </value>
                <value>
                    <fullName>Billing Queue</fullName>
                </value>
                <value>
                    <fullName>Broker Compliance</fullName>
                </value>
                <value>
                    <fullName>Broker Escalation</fullName>
                </value>
                <value>
                    <fullName>Broker Sales Support</fullName>
                </value>
                <value>
                    <fullName>Group Structure Approval</fullName>
                </value>
                <value>
                    <fullName>MAST Tech Queue</fullName>
                </value>
                <value>
                    <fullName>Non Platinum Support</fullName>
                </value>
                <value>
                    <fullName>Platinum Support</fullName>
                </value>
                <value>
                    <fullName>Project 51 Support</fullName>
                </value>
                <value>
                    <fullName>Quality Audit</fullName>
                </value>
                <value>
                    <fullName>RFP Queue</fullName>
                </value>
                <value>
                    <fullName>Settlement Queue</fullName>
                </value>
                <value>
                    <fullName>SFDC Support Team</fullName>
                </value>
                <value>
                    <fullName>BeneFact Portal Tech Queue</fullName>
                </value>
                <value>
                    <fullName>AIA Admin Queue</fullName>
                </value>
                <value>
                    <fullName>Stop Table Tech Queue</fullName>
                </value>
                <value>
                    <fullName>Production ID Card Queue</fullName>
                </value>
                <value>
                    <fullName>Operations Technical Support Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Dedicated Rep</fullName>
                </value>
                <value>
                    <fullName>Account Dedicated Rep Back-up</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Actuary</fullName>
                </value>
                <value>
                    <fullName>AE BA</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Audit Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>BeneFact Coder</fullName>
                </value>
                <value>
                    <fullName>BeneFact Tester</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Account Set-up</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Mgr/Sup</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Workflow Mgmt</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing Tech</fullName>
                </value>
                <value>
                    <fullName>Business Integration Manager</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>Cede Document Upload</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Contract Tech</fullName>
                </value>
                <value>
                    <fullName>Corporate Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>Facets Migration Contact</fullName>
                </value>
                <value>
                    <fullName>General User</fullName>
                </value>
                <value>
                    <fullName>Implementation Coordinator</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>Implementation PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type_Stage__c</fullName>
        <label>Workplan Type Stage</label>
        <referenceTo>Workplan_Type_Stage__c</referenceTo>
        <relationshipLabel>Workplan Type Assignment</relationshipLabel>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipName>Workplan_Type_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X120_Day_Offset__c</fullName>
        <label>120 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X180_Day_Offset__c</fullName>
        <label>180 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X60_Day_Offset__c</fullName>
        <label>60 Day Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Workplan Type Assignment</label>
    <nameField>
        <displayFormat>WTA-{000000}</displayFormat>
        <label>Workplan Type Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Workplan_Type_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>WPT</fullName>
        <columns>NAME</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Workplan_Type_Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>WPT</label>
    </listViews>
    <recordTypes>
        <fullName>Workplan_Assignment</fullName>
        <active>true</active>
        <label>Workplan Assignment</label>
    </recordTypes>
    <validationRules>
        <fullName>EWTA_001</fullName>
        <active>true</active>
        <description>Making user field mandatory if assignee type is user</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(IF( 
AND( 
TEXT(  Assignee_Type__c  ) = "User", 
ISBLANK(  Default_Owner__c  )), True, False 
))</errorConditionFormula>
        <errorDisplayField>Default_Owner__c</errorDisplayField>
        <errorMessage>EWTA_001:  Please Enter Value in User</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_002</fullName>
        <active>true</active>
        <description>Making user mandatory if assignee type is Queue</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(IF( 
AND( 
TEXT(  Assignee_Type__c  ) = "Queue", 
ISBLANK(  TEXT( Queue_Name__c)   )), True, False 
))</errorConditionFormula>
        <errorDisplayField>Queue_Name__c</errorDisplayField>
        <errorMessage>EWTA_002: Please Enter Value in Queue Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_003</fullName>
        <active>true</active>
        <description>Making Role mandatory if assignee type is Role</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(IF( 
AND( 
TEXT(  Assignee_Type__c  ) = "Role", 
ISBLANK(  TEXT(  Role__c )   )), True, False 
))</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>EWTA_003 : Please select a Value in Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_004</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND( Assgin_To_Non_AIA_Contact__c =true, ISBLANK(    Contact__c  )  ))</errorConditionFormula>
        <errorMessage>Please Enter Value in Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWTA_005</fullName>
        <active>true</active>
        <description>If the workplan type.Active Flag = True, don't allow insert of new workplan type assignments</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; ISNEW() &amp;&amp; Workplan_Type__r.Active__c</errorConditionFormula>
        <errorMessage>You can not add new workplan type assignments for an active workplan type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Queue_Mandatory_Assigneetype_Queue</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,'Queue'), ISBLANK( text( Queue_Name__c) )  )</errorConditionFormula>
        <errorMessage>Please Enter Value in Queue Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Mandatory_Assigneetype_Role</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,'Role'), ISBLANK( text(  Role__c ) )  )</errorConditionFormula>
        <errorMessage>Please select a Value in Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Mandatory_Assigneetype_user</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ispickval(Assignee_Type__c,'User'), ISBLANK( Default_Owner__c )  )</errorConditionFormula>
        <errorMessage>Please Enter Value in User</errorMessage>
    </validationRules>
</CustomObject>